--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -85,7 +85,7 @@
 
 .footer-form-input {
   display: block;
-  min-width: 450px;
+  width: 100%;
   height: 50px;
   background-color: transparent;
   border: 1px solid rgba(255, 255, 255, 0.3);
