--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,6 +10,7 @@
 
 // layout
 @import "./layout/header";
+@import "./layout/menu";
 @import "./layout/hero";
 @import "./layout/modal";
 @import "./layout/advantages";
