--- a/css/main.css
+++ b/css/main.css
@@ -119,18 +119,20 @@ img {
   color: #2196f3;
 }
 
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .nav-logo {
+    margin-right: 88px;
+    font-size: 24px;
+    line-height: 1.166;
+  }
+}
+
 .menu-button {
   display: inline-flex;
   margin: 0;
   padding: 0;
   border: none;
   background-color: transparent;
-}
-
-@media screen and (min-width: 768px) {
-  .menu-button {
-    display: none;
-  }
 }
 
 .menu-button .icon-menu-open {
@@ -152,32 +154,6 @@ img {
   font-size: 18px;
 }
 
-@media screen and (max-width: 767px) {
-  .menu-container {
-    display: none;
-    position: absolute;
-    top: 100%;
-    left: 0;
-    width: 100%;
-    height: 393px;
-  }
-  .menu-container.is-open {
-    display: block;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .menu-container {
-    display: flex;
-    justify-content: space-between;
-    flex-grow: 1;
-  }
-}
-
-.navigation {
-  padding-top: 60px;
-}
-
 .nav-list-link {
   display: inline-block;
   font-weight: 500;
@@ -185,7 +161,6 @@ img {
   letter-spacing: 0.02em;
   color: #212121;
   transition: color 250ms var(--timing-fn);
-  padding-bottom: 40px;
 }
 
 .site-nav .nav-list-link.is-current, .nav-list-link:hover, .nav-list-link:focus {
@@ -251,6 +226,95 @@ img {
 .address-list-item:focus .address-list-icon,
 .address-list-item:active .address-list-icon {
   fill: var(--accent-color);
+}
+
+@media screen and (max-width: 767px) {
+  .menu-container {
+    display: none;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    height: 393px;
+  }
+  .menu-container.is-open {
+    display: block;
+  }
+  .nav-list-item:not(:last-child) {
+    margin-bottom: 40px;
+  }
+  .navigation {
+    padding: 60px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .address-list-icon {
+    width: 14px;
+    height: 14px;
+    margin-right: 8px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .menu-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-grow: 1;
+    padding: 0px;
+  }
+  .menu-button {
+    display: none;
+  }
+  .nav-list-link {
+    position: relative;
+    padding-top: 32px;
+    padding-bottom: 32px;
+  }
+  .is-current::after {
+    position: absolute;
+    margin-top: 0;
+  }
+  .nav-list {
+    display: flex;
+    justify-content: space-between;
+    font-size: 14px;
+    line-height: 1.143;
+  }
+  .nav-list-item:not(:last-child) {
+    margin-right: 50px;
+  }
+  .site-nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .header-mail {
+    font-size: 12px;
+    line-height: 1.166;
+    margin-bottom: 10px;
+  }
+  .header-phone {
+    font-size: 12px;
+    line-height: 1.166;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .header-mail {
+    font-size: 14px;
+    line-height: 1.143;
+    margin-bottom: 0px;
+    margin-right: 30px;
+  }
+  .header-phone {
+    font-size: 14px;
+    line-height: 1.143;
+  }
+  .address-list {
+    display: flex;
+  }
 }
 
 .hero {
