--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -24,6 +24,13 @@
   color: #2196f3;
 }
 
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .nav-logo {
+    margin-right: 88px;
+    font-size: 24px;
+    line-height: 1.166;
+  }
+}
 // .header {
 //     padding-top: 24px;
 //     padding-bottom: 24px;
