Корректирует размер hero и footer на десктопе

--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -131,7 +131,6 @@
     display: flex;
     align-items: baseline;
     justify-content: center;
-    margin-bottom: 60px;
   }
 
   .social-footer {
@@ -143,11 +142,24 @@
   }
 }
 
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .footer-contact {
+    margin-bottom: 60px;
+  }
+}
+
 @media screen and (min-width: 1200px) {
   .footer .container {
     display: flex;
     align-items: baseline;
     justify-content: center;
+  }
+
+  .footer-logo {
+    font-weight: 700;
+    font-size: 26px;
+    line-height: 1.192;
+    letter-spacing: 0.03em;
   }
 
   .social-footer {
