--- a/css/main.css
+++ b/css/main.css
@@ -389,11 +389,17 @@ img {
 
 @media screen and (min-width: 1200px) {
   .hero {
+    padding-top: 200px;
+    padding-bottom: 200px;
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/hero/hero_desk-1x.jpg");
     background-repeat: no-repeat;
     background-position: center top;
     background-size: 1600px 600px;
     margin-bottom: 94px;
+  }
+  .hero-title {
+    font-size: 44px;
+    line-height: 1.363;
   }
 }
 
@@ -668,7 +674,7 @@ img {
   color: #757575;
 }
 
-@media screen and (max-width: 785px) {
+@media screen and (max-width: 767px) {
   .advantages-list-undertitle {
     margin-bottom: 30px;
   }
@@ -1052,7 +1058,6 @@ img {
     display: flex;
     align-items: baseline;
     justify-content: center;
-    margin-bottom: 60px;
   }
   .social-footer {
     margin: 0 auto;
@@ -1062,11 +1067,23 @@ img {
   }
 }
 
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .footer-contact {
+    margin-bottom: 60px;
+  }
+}
+
 @media screen and (min-width: 1200px) {
   .footer .container {
     display: flex;
     align-items: baseline;
     justify-content: center;
+  }
+  .footer-logo {
+    font-weight: 700;
+    font-size: 26px;
+    line-height: 1.192;
+    letter-spacing: 0.03em;
   }
   .social-footer {
     margin-left: 70px;
