--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -82,6 +82,8 @@
 
 @media screen and (min-width: 1200px) {
   .hero {
+    padding-top: 200px;
+    padding-bottom: 200px;
     background-image: linear-gradient(
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
@@ -91,6 +93,11 @@
     background-position: center top;
     background-size: 1600px 600px;
     margin-bottom: 94px;
+  }
+
+  .hero-title {
+    font-size: 44px;
+    line-height: 1.363;
   }
 }
 
